--- a/templates/Compte/administrateur/GestionProduits/ListeProduits.html.twig
+++ b/templates/Compte/administrateur/GestionProduits/ListeProduits.html.twig
@@ -14,10 +14,10 @@
                 <a href="#">Liste des produits</a>
             </div>
             <div class="HistoriqueCommandes">
-                <a href={{ path('Administrateur_HistoriquesCommandesUtilisateurs') }}>Historique des Commandes des utilisateurs</a>
+                <a href={{ path('Compte_UtilisateurHistoriqueCommande') }}>Historique des Commandes des utilisateurs</a>
             </div>
             <div class="BoiteReception">
-                <a href={{ path('Administrateur_BoiteReception') }}>Boite de Reception</a>
+                <a href={{ path('Compte_BoiteReception') }}>Boite de Reception</a>
             </div>
         </div> {# Fin div Droite #}
 
