--- a/templates/Compte/utilisateurs/ModifInfosPersos.html.twig
+++ b/templates/Compte/utilisateurs/ModifInfosPersos.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-   <link rel="stylesheet" href="{{ asset('CSS/FormModifInfos.css') }}">
+   <link rel="stylesheet" href="{{ asset('CSS/Utilisateurs.css') }}">
     <title>Mofif Infos Persos</title>
 
     <!-- Body -->
