--- a/templates/Compte/utilisateurs/formRetractation.html.twig
+++ b/templates/Compte/utilisateurs/formRetractation.html.twig
@@ -12,17 +12,17 @@
 <body>
     <h1>Formulaire de retour</h1> 
         <div class='Droite'>
-            <div class="infosPersos">
-                <a href={{ path('CompteUtilisateur_infosPersos') }}>Mes Informations Personnelles</a>
+            <div class="InfosPersos">
+                <a href={{ path('Compte_infosPersos') }}>Mes Informations Personnelles</a>
             </div>
-            <div class="Retour">
+            <div class="Retractation">
                 <a href="#">Formulaire de retour</a>
             </div>
-            <div class="Livraison">
-                <a href={{ path('CompteUtilisateur_HistoriqueCommande') }}>Historique de vos Commandes</a>
+            <div class="HistoriqueDeCommandes">
+                <a href={{ path('Compte_UtilisateurHistoriqueCommande') }}>Historique de vos Commandes</a>
             </div>
-            <div class="remboursement">
-                <a href={{ path('CompteUtilisateur_BoiteReception') }}>Boite de Reception</a>
+            <div class="BoiteReception">
+                <a href={{ path('Compte_BoiteReception') }}>Boite de Reception</a>
             </div>
         </div> {# Fin div Droite #}
         <div class="FormRetour"> <br>
