--- a/templates/Compte/BoiteReception/MessageRecus.html.twig
+++ b/templates/Compte/BoiteReception/MessageRecus.html.twig
@@ -24,8 +24,13 @@
                     {% endif %}
 
                     <div class="d-flex justify-content-end gap-2">
-                        <a href="{{ path('messages_detail', {id: message.id}) }}" class="btn btn-primary btn-sm">Détail</a>
-                        <a href="{{ path('messages_reply', {id: message.id}) }}" class="btn btn-success btn-sm">Répondre</a>
+                        {% if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('Compte_AdministrateurDetailMessage', {id: message.id}) }}" class="btn btn-primary btn-sm">Détail ADMIN</a>
+                        <a href="{{ path('Compte_AdministarteurReponseMessage', {id: message.id}) }}" class="btn btn-success btn-sm">Répondre ADMIN</a>
+                         {% elseif is_granted('ROLE_USER') %}
+                        <a href="{{ path('Compte_UtilisateurDetailMessage', {id: message.id}) }}" class="btn btn-primary btn-sm">Détail USER</a>
+                         <a href="{{ path('Compte_UtilisateurReponseMessage', {id: message.id}) }}" class="btn btn-success btn-sm">Répondre USER</a>
+                          {% endif %}
                     </div>
                 </div>
             {% endfor %}
@@ -35,7 +40,7 @@
     {% endif %}
 
     <div class="mt-3">
-        <a href="{{ path('CompteUtilisateur_BoiteReception') }}" class="btn btn-secondary">⬅ Retour</a>
+        <a href="{{ path('Compte_BoiteReception') }}" class="btn btn-secondary">⬅ Retour</a>
     </div>
 </div>
 {% endblock %}
