--- a/templates/Compte/administrateur/GestionUtilisateurs/ListeUtilisateurs.html.twig
+++ b/templates/Compte/administrateur/GestionUtilisateurs/ListeUtilisateurs.html.twig
@@ -13,10 +13,10 @@
                 <a href={{ path('Administrateur_ListeProduits') }}>Liste des produits</a>
             </div>
             <div class="HistoriqueCommandes">
-                <a href={{ path('Administrateur_HistoriquesCommandesUtilisateurs') }}>Historique des Commandes des utilisateurs</a>
+                <a href={{ path('Compte_UtilisateurHistoriqueCommande') }}>Historique des Commandes des utilisateurs</a>
             </div>
             <div class="BoiteReception">
-                <a href={{ path('Administrateur_BoiteReception') }}>Boite de Reception</a>
+                <a href={{ path('Compte_BoiteReception') }}>Boite de Reception</a>
             </div>
         </div> {# Fin div Droite #}
     <table class="liste_utilisateurs">
