--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -32,20 +32,17 @@
       <ul class="navbar-nav mb-2 mb-lg-0">
         {% if is_granted('ROLE_ADMIN') %}
           <li class="nav-item">
-            <a class="nav-link text-white" href={{path('Administrateur_EspaceAdmin')}}>Espace Administrateur</a>
-          </li>
-          <li class="nav-item">
-            {# <a class="nav-link text-white" href="#">Liste des produits</a> #}
+            <a class="nav-link text-white" href={{path('Compte_Espace')}}>Espace Administrateur</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href={{path('app_logout')}}>Déconnexion</a>
           </li>
         {% elseif is_granted('ROLE_USER') %}
           <li class="nav-item">
-            <a class="nav-link text-white" href={{path('CompteUtilisateur_moncompte')}}>Mon compte</a>
+            <a class="nav-link text-white" href={{path('Compte_Espace')}}>Mon compte</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href={{path('CompteUtilisateur_Panier')}}>Mon panier</a> 
+            <a class="nav-link text-white" href={{path('Compte_UtilisateurPanier')}}>Mon panier</a> 
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href={{path('app_logout')}}>Déconnexion</a>
